# audiosplit

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
audiosplit/: Cargo.toml
audiosplit/src/: cli.rs  main.rs
audiosplit/src/cli/: duration.rs
audiosplit/tests/: cli.rs
audiosplit_core/: Cargo.toml
audiosplit_core/benches/: split_benchmark.rs
audiosplit_core/src/: lib.rs
audiosplit_core/tests/: run.rs
indicatif/: Cargo.toml
indicatif/src/: lib.rs
testing/assert_cmd/: Cargo.toml
testing/assert_cmd/src/: lib.rs
testing/indicatif/: Cargo.toml
testing/indicatif/src/: lib.rs
