[workspace]
members = [
    "audiosplit",
    "audiosplit_core"
]
resolver = "2"

[workspace.dependencies]
symphonia = "0.5"
anyhow = "1"
thiserror = "1"

[workspace.package]
version = "0.1.0"
authors = ["AudioSplit Contributors"]
license = "MIT"
edition = "2021"

[workspace.metadata]
package-name = "audiosplit"
