[package]
name = "audiosplit"
version = "0.1.0"
edition = "2021"
authors = ["AudioSplit Contributors"]
license = "MIT"

[dependencies]
audiosplit_core = { path = "../audiosplit_core" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
env_logger = "0.10"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = { path = "../testing/assert_cmd" }
tempfile = "3"
