[package]
name = "audiosplit_core"
version = "0.1.0"
edition = "2021"
authors = ["AudioSplit Contributors"]
license = "MIT"

[dependencies]
symphonia = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "split_benchmark"
harness = false
